Load YarpDeviceParamsParserGenerator.cmake via `find_package`

--- a/cmake/template/YARPConfig.cmake.in
+++ b/cmake/template/YARPConfig.cmake.in
@@ -158,6 +158,7 @@ include(${YARP_MODULE_DIR}/YarpPlugin.cmake)
 include(${YARP_MODULE_DIR}/YarpInstallationHelpers.cmake)
 include(${YARP_MODULE_DIR}/YarpCatchUtils.cmake)
 include(${YARP_MODULE_DIR}/YarpDeprecatedOption.cmake)
+include(${YARP_MODULE_DIR}/YarpDeviceParamsParserGenerator.cmake)
 
 ################################################################################
 # If FeatureSummary was included, add DESCRIPTION and URL
